frontend/src/styles/phrasepair.css
.phrase-pair-container-1 {
  display: flex;
  flex-direction: row;
  gap:80px;
  width:100%;
  color:white;
  align-items: center;
  justify-content: space-around;
}

.l-view {
  width:500px;
  height:80px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
}
.l-edit {
  width:500px;
  height:80px;
}


#save-phrase-pair:hover {
  cursor: pointer;
}
#delete-phrase-pair:hover {
  cursor: pointer;
  background-color:none;
}
#delete-phrase-pair {
  border: none;
}

#edit-phrase-pair:hover {
  cursor: pointer;
}

.get-phrase-button {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 150px;
  height: 50px;
  border-radius: 10px;
}

.get-phrase-button:hover {
  cursor: pointer;
}

